--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tanstack/react-table": "^8.19.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.3.2",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.407.0",
     "react": "^18.3.1",
