--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@reduxjs/toolkit": "^2.2.6",
+    "@smastrom/react-rating": "^1.5.0",
     "@tanstack/react-table": "^8.19.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -30,7 +31,6 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
-    "react-rating": "^2.0.5",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
     "sonner": "^1.5.0",
