--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@smastrom/react-rating": "^1.5.0",
         "@tanstack/react-table": "^8.19.2",
         "class-variance-authority": "^0.7.0",
+        "cloudinary": "^2.2.0",
         "clsx": "^2.1.1",
         "framer-motion": "^11.3.2",
         "keen-slider": "^6.8.6",
